fix: image covers entire container

--- a/src/Components/cards/bigCard/bigCard.module.scss
+++ b/src/Components/cards/bigCard/bigCard.module.scss
@@ -25,8 +25,10 @@
 
 .cardImage {
   position: relative;
-  height: 320px;
-  width: 500px;
+  width: 680px;
+  height: 382px;
   border-radius: 8px;
   overflow: hidden;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
